removing ffg route, and fixing vendor string to yasb.app
